snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha512
03c5c3d2117908502932929c4457581fd040e250d605c264f276d37e1cd75381c5a63c088eb84fbc8446262239397a6aa463b41f3bea38ea9cda439ecfdf6977